Add: Floating Window enable button to home page, enble it to keep the app in background, try to forbidden system to kill it

--- a/design/src/main/res/values/strings.xml
+++ b/design/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="help">Help</string>
     <string name="about">About</string>
     <string name="sync_profile">Sync Profile</string>
+    <string name="floating_window">Floating Window</string>
+    <string name="show_floating_window">Show Floating Window</string>
+    <string name="hide_floating_window">Hide Floating Window</string>
 
     <string name="copied">Copied</string>
 
